# meta-impy

./: .gitignore  README.txt  README_MESH.txt
linden/: install.xml
linden/doc/: contributions.txt
linden/indra/: CMakeLists.txt  develop.py
linden/indra/cmake/: 00-Common.cmake  CMakeLists.txt  CopyWinLibs.cmake  Python.cmake  UnixInstall.cmake  Variables.cmake  gpg.vs.cmake  libgcrypt.cmake  libgpg-error.cmake  libotr.cmake  libotrb.cmake  mimesh.cmake
linden/indra/copy_win_scripts/: start-client.py
linden/indra/gpg.vs/: NOTE.txt
linden/indra/libgcrypt/: CMakeLists.txt
linden/indra/libgcrypt/libgcrypt-1.2.2/: Makefile.am  Makefile.in  configure  configure.ac
linden/indra/libgcrypt/libgcrypt-1.2.2/doc/.svn/: entries
linden/indra/libgcrypt/libgcrypt-1.2.2/w32-dll/.svn/: entries
linden/indra/libgpg-error/: CMakeLists.txt
linden/indra/libotr/: CMakeLists.txt
linden/indra/linux_crash_logger/: llcrashloggerlinux.cpp
linden/indra/llaudio/: llstreamingaudio_fmod.cpp
linden/indra/llcharacter/: llkeyframemotion.cpp  llmultigesture.cpp
linden/indra/llcommon/: indra_constants.cpp  indra_constants.h  linden_common.h  llassettype.h  llavatarname.cpp  llavatarname.h  llmd5.cpp  llpreprocessor.h  llprocessor.cpp  llsdserialize_xml.cpp  llstring.cpp  llstring.h  llversionviewer.h  roles_constants.h
linden/indra/llcrashlogger/: llcrashlogger.cpp
linden/indra/llinventory/: llnotecard.cpp  llparcel.h
linden/indra/llmath/: CMakeLists.txt  llvolume.cpp  llvolume.h  xform.h
linden/indra/llmessage/: llassetstorage.cpp  llcachename.cpp  lldatapacker.cpp  llinstantmessage.cpp  lliosocket.cpp  llloginflags.h  llpacketring.cpp  llregionflags.h  lltaskname.h  message.cpp  message.h  net.cpp
linden/indra/llprimitive/: CMakeLists.txt  llprimitive.cpp  lltextureentry.cpp
linden/indra/llrender/: llfont.cpp  llgldbg.cpp
linden/indra/llui/: llbutton.cpp  llcombobox.cpp  llcombobox.h  lliconctrl.cpp  lltexteditor.cpp  llui.cpp  lluistring.h
linden/indra/llvfs/: lldir.cpp  lldir.h  lldir_linux.cpp  lldir_mac.cpp  lldir_solaris.cpp
linden/indra/llwindow/: llwindowmacosx-objc.mm  llwindowmacosx.cpp  (+2 more)
linden/indra/mimesh/: CMakeLists.txt  gl.c  gl.h  mimesh.cpp  mimesh.h
linden/indra/mimesh/libg3d-0.0.8/include/g3d/: config.h  plugins.h  stream.h  texture.h  types.h
linden/indra/mimesh/libg3d-0.0.8/plugins/image/: img_bmp.c  img_dds.c  img_gdkpixbuf.c  img_jpeg.c  img_sgi.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_3dm/: imp_3dm.c  imp_3dm_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_3dmf/: imp_3dmf.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_3ds/: imp_3ds.c  imp_3ds.h  imp_3ds_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_ac3d/: imp_ac3d.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_acf/: imp_acf.c  imp_acf_airfoil.c  imp_acf_airfoil.h  imp_acf_def.c  imp_acf_def_proto.h  imp_acf_wing.c  imp_acf_wing.h
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_ar/: imp_ar.c  imp_ar_carini.c  imp_ar_carini.h  imp_ar_dof.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_ase/: imp_ase.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_blend/: imp_blend.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_c4d/: imp_c4d.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_cob/: imp_cob.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_dae/: imp_dae.c  imp_dae_cb.c  imp_dae_xml.c  imp_dae_xml.h
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_dpm/: imp_dpm.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_dxf/: imp_dxf.c  imp_dxf_callbacks.c  imp_dxf_color.c  imp_dxf_section.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_flt/: imp_flt.c  imp_flt_callbacks.c  imp_flt_callbacks.h
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_glb/: imp_glb.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_heightfield/: imp_heightfield.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_iob/: imp_iob.c  imp_iob.h  imp_iob_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_joe/: imp_joe.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_kmz/: imp_kmz.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_ldraw/: imp_ldraw.c  imp_ldraw_color.c  imp_ldraw_mpd.c  imp_ldraw_part.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_leocad/: imp_leocad.c  imp_leocad_library.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_lwo/: imp_lwo.c  imp_lwo.h  imp_lwo_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_max/: imp_max.c  imp_max_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_maya/: imp_maya.c  imp_maya_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_md2/: imp_md2.c  imp_md2_normals.h
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_md3/: imp_md3.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_nff/: imp_nff.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_obj/: imp_obj.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_osm/: imp_osm.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_q3o/: imp_q3o.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_r4/: imp_r4.c  imp_r4_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_rbh/: imp_rbh.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_skp/: imp_skp.c  imp_skp_callbacks.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_stl/: imp_stl.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_ta/: imp_ta.c  imp_ta_3do.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_test/: imp_test.c
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_vrml/: imp_vrml.c  imp_vrml_v1.c  imp_vrml_v1.l
linden/indra/mimesh/libg3d-0.0.8/plugins/import/imp_vrml2/: imp_vrml2.c  imp_vrml_read.c  imp_vrml_types.h
linden/indra/mimesh/libg3d-0.0.8/src/: context.c  iff.c  model.c  plugins.c  stream.c  stream_buffer.c  stream_file.c  stream_gsf.c  stream_gsf_class.c  stream_gsf_class.h  stream_zlib.c  texture.c
linden/indra/mimesh/libg3d-0.0.8/tests/: test_imgdump.c
linden/scripts/: install.py
(+252 files in other folders)
